--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,13 +1,1 @@
-<script>document.title = 'Brave UI'</script>
-<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/brave/brave-ui/master/favicon.ico">
-<style>
-  #storybook-preview-iframe {
-    background: #FFFFFF;
-  }
-
-  [role="tabpanel"],
-  [role="tabpanel"] * {
-    background-color: rgb(225, 226, 226);
-  }
-
-</style>
+<script>document.title = 'Brave UI'</script> <!-- changes tab name-->
